# ThisIsMyQuant

./: .cursorignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  logging.rs  models.rs  state.rs
src-tauri/src/adapters/: akshare.rs  feed.rs  jinshi.rs  jinshi_calendar.rs  llm.rs  mod.rs  overseas_futures.rs  stock_data.rs
src-tauri/src/commands/: ai.rs  analysis.rs  data.rs  events.rs  market.rs  mod.rs  news.rs  reports.rs  settings.rs  simulation.rs  status.rs  stock.rs  testing.rs  watchlist.rs
src-tauri/src/config/: env_llm.rs  llm_catalog.rs  prefs_store.rs  user_prefs.rs
src-tauri/src/crypto/: credentials.rs
src-tauri/src/db/: mod.rs  questdb.rs  sqlite.rs
src-tauri/src/engine/: ai_context.rs  analysis.rs  anomaly.rs  calendar_filter.rs  dimensions.rs  followup.rs  fundamentals.rs  indicator.rs  kline.rs  kline_agg.rs  liquidity.rs  mod.rs  news_classifier.rs  news_llm_classifier.rs  report_parse.rs  sectors.rs  sim_account.rs  sim_contract.rs  sim_matching.rs  sim_risk.rs  stock_factors.rs  stock_paper.rs
src-tauri/src/services/: analysis_followup.rs  analysis_runner.rs  analysis_scheduler.rs  anomaly_watcher.rs  batch_analysis.rs  calendar_reminder.rs  config_apply.rs  daily_briefing.rs  data_export.rs  data_fetch_cycle.rs  data_maintenance.rs  history_backfill.rs  mod.rs  (+13 more)
src-tauri/tests/: client_e2e.rs  integration_test.rs  sim_trading_test.rs
(+218 files in other folders)
