[package]
name = "thisismyquant"
version = "0.1.0"
description = "ThisIsMyQuant — 国内期货实时行情与大模型走势分析"
authors = ["ThisIsMyQuant"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
dotenvy = "0.15"
thiserror = "1"
futures-util = "0.3"
once_cell = "1"
sha2 = "0.10"
async-trait = "0.1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
tempfile = "3"
